manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "pjkubo-c34e"
spec:
  replicas: 2
   selector:
    matchLabels:
      app: "pjkubo-c34e"
  template:
    metadata:
      labels:
        app: "pjkubo-c34e"
    spec:
      containers:
        - name: "pjkubo-c34e"
          image: "kuboreg.azurecr.io/pjkubo"
          ports:
          - containerPort: 80
